layout update, add marker to map and floating action button, add my private key..

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,7 +1,7 @@
 <resources>
     <string name="app_name">Vacant Homes</string>
     <string-array name="property_type">
-        <item>-- Select Property Type --</item>
+        <item>-- Select --</item>
         <item>Detached</item>
         <item>Semi Detached</item>
         <item>Terraced</item>
